data/derived/fa15/progs/unify/prog0964.ml.out
Characters 72-73:
  ( if n < 10 then 0
                   ^
Error: This expression has type int but an expression was expected of type
         'a list
